<resources>
    <string name="app_name">Maadha</string>
    <string name="main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_Login">Settings</string>
    <string name="action_Logout">Login</string>
    <string name="Error_message">Logout</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="visit">Continue :)</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="license">
SS Teck Services, a Chennai based organisation are pioneer in application development, Business process outsourcing. Overall our team members have vast experience with passion, ambition and commitment has worked with over 100+ clients across the globe with international standard.We assure that we work on very short turnaround time to deliver quality service to our valuable clients. We would like to explore the possibility of cordial and long term tie up with your esteemed organisation.

    </string>
    <string name="address">
        Address:
        Old No. 18, New No. 5,
        Subba Naidu Street, Choolai,
        Chennai, Tamil Nadu 600112
    </string>
    <string name="address_bct">
        Old No. 18, New No. 5,
        Subba Naidu Street, Choolai,
        Chennai, Tamil Nadu 600112
    </string>
    <string name="mailid">

        sudhan@ssteckservices.com

        marketing@ssteckservices.com

    </string>
    <string name="versionname">

        Beta
    </string>
    <string name="termsandcondition">
        Terms and Conditions -
By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to ssteckservices.
ssteckservices is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.
The Fresh N Juicy app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the Fresh N Juicy app won’t work properly or at all.
You should be aware that there are certain things that ssteckservices will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but ssteckservices cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.
If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.
Along the same lines, ssteckservices cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, ssteckservices cannot accept responsibility.
With respect to ssteckservices’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. ssteckservices accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.
At some point, we may wish to update the app. The app is currently available on Android – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. ssteckservices does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.
Changes to This Terms and Conditions
We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.
Contact Us
If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us at sudhan@ssteckservices.com.
This Terms and Conditions page was generated by App Privacy Policy Generator

    </string>
    <string name="aboutus_title">About Balaji Charitable Trust</string>
    <string name="aboutus_slogan">Happiness does not result from what we get,but from what we give.</string>
    <string name="aboutus_desc">
        BALAJI CHARITABLE TRUST was formally registered
        under Indian Trust Act in October 2013 by experienced Social Workers who have been in this service field since 19th century.

    Registration No:214/2013
    Unique ID:TN/2018/0185830</string>
    <string name="mission">The Mission of the Trust is to reach out its charitable activities to the differently abled, Orphan / abandoned children and also persons below poverty line by providing medical, educational and livelihood support to uplift them in their lives towards self reliance irrespective of their age, caste, creed or community.</string>
    <string name="vission">We aim to provide maximum service to maximum people to the maximum possible extent. We attempt to provide a life of dignity to all, a life without distinctions based on ability, gender, age, caste, language, region, religion, race, class and nationality and opinion.</string>
</resources>